# 2026-06-09_RAG_LangGraph_Agenty

./: .env.example  README.md  pyproject.toml  scraper.ipynb  test_environment.py
Agenty/: README.md  job_search_agent.py  scraping.ipynb  simple_agent.py  test.ipynb
Agenty/job_search_server/: main.py
Agenty/job_search_server/components/: job_expectations.txt  prompts.py  resources.py  tools.py
Agenty/simple_server/: main.py
Agenty/simple_server/components/: data_1.json  data_2.json  prompts.py  resources.py  tools.py
LangGraph/Kod/: 1. Wprowadzenie do Langgraph.ipynb  2. LLMy w Langgraph.ipynb  3. Streaming i asynchroniczność.ipynb  4. Złożony workflow.ipynb
LangGraph/Rozwiąznaia/: 1_2. Wprowadzenie i LLMy w Langgraph - rozwiązania.ipynb  3. Streaming i asynchroniczność - rozwiązania.ipynb  4. Złożony workflow - rozwiązania.ipynb
LangGraph/Zadania/: 1_2. Wprowadzenie i LLMy w Langgraph - zadania.ipynb  3. Streaming i asynchroniczność - zadania.ipynb  4. Złożony workflow - zadania.ipynb  recenzje.json
RAG/: RAG biblijny – rozwiązania.ipynb
RAG/Kod/: Ewaluacja RAGa (Deepeval).ipynb  Ewaluacja RAGa (Ragas).ipynb  System RAG podsumowanie.ipynb  guardrails.ipynb  guardrails_config.json
RAG/Kod/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json
RAG/Kod/documents/: pan-tadeusz.docx  pan-tadeusz.txt
RAG/Zadania/: Ewaluacja RAGa – zadania.ipynb  RAG biblijny – zadania.ipynb  results.json
RAG/zadanie_11/: README.md  config.py  main.py  models.py  pipeline.py  prompts.py  state.py
(+11 files in other folders)
