[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "deepeval>=3.7.0",
    "docx2txt>=0.9",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.4.10",
    "langchain>=1.0.5",
    "langchain-community>=0.3.20,<0.4",
    "langchain-core>=1.0.4",
    "langchain-huggingface>=1.0.1",
    "langchain-openai>=1.0.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.2.0",
    "openai>=2.7.2",
    "pymupdf>=1.26.6",
    "pymupdf4llm>=0.2.0",
    "qdrant-client>=1.15.1",
    "fastembed>=0.4.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "pydantic-ai>=1.106.0",
    "openai-guardrails>=0.2.1",
    "ragas==0.4.3",
]
